# LuxTTS

./: .gitignore  README.md  checkpython.sh  config.yml  credentials.yml.dist  main.py  pyproject.toml
tests/: conftest.py  test_config.py  test_exceptions.py  test_generation_types.py  test_infer_utils.py  test_modeling_utils.py  test_tokenizer.py
zipvoice/: __init__.py  config.py  constants.py  exceptions.py  generation_types.py  luxvoice.py  modeling_utils.py  onnx_modeling.py
zipvoice/models/: zipvoice.py  zipvoice_dialog.py  zipvoice_distill.py
zipvoice/models/modules/: solver.py  zipformer_two_stream.py
zipvoice/models/modules/scaling/: __init__.py  _activations.py  _normalization.py  _piecewise.py
zipvoice/models/modules/zipformer/: __init__.py  _attention.py  _conv.py  _encoder.py
zipvoice/tokenizer/: normalizer.py  tokenizer.py
zipvoice/utils/: checkpoint.py  common.py  diagnostics.py  feature.py  hooks.py  infer.py  lr_scheduler.py  optim.py  scaling_converter.py  tensorrt.py
